--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,16 @@
   </head>
   <body>
     <header></header>
-    <main></main>
+    <main>
+      <p>Nombres:</p>
+      <br>
+      <input id="nombreUsuario" type="text">
+    <p>Número de tarjeta:</p>
+    <br>
+    <input id="numeroTarjeta" type="text">
+    <button type="button" name="button" isValid.addEventListener("click", validator);>Mostrar</button>
+    <p id="textoString"></p>
+    </main>
     <footer></footer>
     <script src="index.js" type="module"></script>
   </body>
