Imagenes en readme y modificaciones en validator

--- a/src/index.html
+++ b/src/index.html
@@ -29,5 +29,6 @@
       </div>
     <script src="index.js" type="module"></script>
     </main>
+    <footer>Creado por Rosa Rojas</footer>
   </body>
 </html>
