Readme despúes de feedback

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
          <!--logo del restaurante-->
          <img class="logoRestaurante" src="imagenes/logo-brasas.png" alt="">
            <div class="contenedorDatosUsuario">
-              <p>Nombres:</p>
+              <p>Nombre:</p>
               <input id="inputNombre" type="text">
               <p>Número de tarjeta:</p>
               <input id="inputNumeroTarjeta" type="text" maxlength="16">
@@ -28,8 +28,8 @@
            </div>
         </form>
       </div>
-    <script src="index.js" type="module"></script>
     </main>
     <footer>Creado por Rosa Rojas</footer>
+   <script src="index.js" type="module"></script>
   </body>
 </html>
